[gd_scene load_steps=17 format=3 uid="uid://bsymtrcywof8h"]

[ext_resource type="Script" uid="uid://nw5ruudrc0y8" path="res://Scenes/UI/SelectionPanel/SelectionPanel.gd" id="1_6p0cf"]
[ext_resource type="Texture2D" uid="uid://bqewnwwwtjah8" path="res://Ron Fixed.png" id="1_a7am4"]
[ext_resource type="StyleBox" uid="uid://d2nhtn83ckc8g" path="res://Styles/CommonStyle.tres" id="1_fnwvd"]
[ext_resource type="Script" uid="uid://gtiihwe2l2ar" path="res://Resources/Units/UnitStats.gd" id="2_3ei1l"]
[ext_resource type="PackedScene" uid="uid://b7xsrf8tucg53" path="res://Scenes/UI/CustomButton/CustomButton.tscn" id="2_fnwvd"]
[ext_resource type="Resource" uid="uid://bkusrneo04jux" path="res://Resources/Units/Players/StatsPlayerBrawler.tres" id="3_6nryo"]
[ext_resource type="Resource" uid="uid://cuyo6e2edy7ar" path="res://Resources/Units/Players/StatsPlayerBunny.tres" id="4_xicss"]
[ext_resource type="Resource" uid="uid://4olc5y14gnmo" path="res://Resources/Units/Players/StatsPlayerCrazy.tres" id="5_67nx7"]
[ext_resource type="Resource" uid="uid://pxubn12vm1u3" path="res://Resources/Units/Players/StatsPlayerKnight.tres" id="6_hhc3j"]
[ext_resource type="Resource" uid="uid://uigxha3k6efg" path="res://Resources/Units/Players/StatsPlayerWellRounded.tres" id="7_317x2"]
[ext_resource type="Script" uid="uid://hg3klvk6bs7k" path="res://Resources/Items/Weapons/ItemWeapon.gd" id="8_hhc3j"]
[ext_resource type="Resource" uid="uid://df2b40dgyo3wa" path="res://Resources/Items/Weapons/Ranged/Pistol/ItemPistol1.tres" id="9_317x2"]
[ext_resource type="Resource" uid="uid://c6iv2ytql0uv7" path="res://Resources/Items/Weapons/Melee/Axe/ItemAxe1.tres" id="10_x8vr0"]
[ext_resource type="Resource" uid="uid://cvpeqq3yw5n7g" path="res://Resources/Items/Weapons/Melee/Punch/ItemPunch1.tres" id="11_38m6c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6p0cf"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qgonx"]
font_size = 24

[node name="SelectionPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6p0cf")
script = ExtResource("1_6p0cf")
players = Array[ExtResource("2_3ei1l")]([ExtResource("3_6nryo"), ExtResource("4_xicss"), ExtResource("5_67nx7"), ExtResource("6_hhc3j"), ExtResource("7_317x2")])
start_weapons = Array[ExtResource("8_hhc3j")]([ExtResource("9_317x2"), ExtResource("10_x8vr0"), ExtResource("11_38m6c")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 550)
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/Control"]
custom_minimum_size = Vector2(380, 550)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -20.0
offset_right = 190.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_fnwvd")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Control/Panel/MarginContainer"]
layout_mode = 2

[node name="PlayerIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/Control/Panel/MarginContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_a7am4")
expand_mode = 1
stretch_mode = 5

[node name="PlayerName" type="Label" parent="MarginContainer/VBoxContainer/Control/Panel/MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 128.0
offset_top = 5.0
offset_right = 292.0
offset_bottom = 34.0
text = "Player name"
label_settings = SubResource("LabelSettings_qgonx")

[node name="PlayerTitle" type="Label" parent="MarginContainer/VBoxContainer/Control/Panel/MarginContainer/Control"]
unique_name_in_owner = true
modulate = Color(0.803922, 0.678431, 0.0980392, 1)
layout_mode = 0
offset_left = 129.0
offset_top = 45.0
offset_right = 293.0
offset_bottom = 74.0
text = "Player"
label_settings = SubResource("LabelSettings_qgonx")

[node name="PlayerDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Control/Panel/MarginContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(332, 353)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -40.0
offset_right = 166.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "Description"

[node name="ContinueButton" parent="MarginContainer/VBoxContainer/Control" instance=ExtResource("2_fnwvd")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -172.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 58.0
grow_horizontal = 0
grow_vertical = 1
text = "Continue"

[node name="Items" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Items"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="PlayerContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Items/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="SelectionCard" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/PlayerContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard2" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/PlayerContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard3" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/PlayerContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard4" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/PlayerContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard5" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/PlayerContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="WeaponContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Items/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SelectionCard" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard6" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard7" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard8" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard9" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard10" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard11" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard2" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard3" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard4" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[node name="SelectionCard5" type="Button" parent="MarginContainer/VBoxContainer/Items/VBoxContainer/WeaponContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_fnwvd")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/ContinueButton" to="." method="_on_continue_button_pressed"]
